# gats

./: .env  .gitignore  README.md  RESULTS_SUMMARY.md  arxiv-submission.yaml  check_data.py  debug_level2.py  demo_features.py  download_level3.py  pyproject.toml  requirements.txt  run_gats_eval_full.py  run_stress_test.py  test.py  test_modules.py
agents/: tot.py
analysis/: statistics.py
benchmarks/: __init__.py  api_bank.py  api_bank_real.py  tasks.py  toolbench.py  toolbench_real.py
data/api_bank/: level-3-api.json  synthetic.json
data/toolbench/: test_data.json
experiments/: run.py  run_ablation_study.py  run_experiment.py  run_external.py  run_gats_eval.py
gats/: __init__.py  agent.py  calibration.py  core.py  event_log.py  llm.py  search.py  verifier.py  world_model.py
logs/: agent_logs.jsonl  search_logs.jsonl
paper/: gats_paper.tex  main.tex
paper/arxiv/src/: references.bib
scripts/: api_bank_real.py  download_datasets.py  reproduce.py  reproduce.sh  run_ablations.py  run_llm_experiments.py  test_pipeline.py
tools/: download_api_bank.py
